add deleteSigningKey alias in IdentityProvider to sync with master

--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -8306,6 +8306,11 @@ definitions:
           - dest: idpId
             src: id
         operationId: getIdentityProviderSigningKey
+      - alias: deleteSigningKey
+        arguments:
+          - dest: idpId
+            src: id
+        operationId: deleteIdentityProviderKey
       - alias: cloneKey
         arguments:
           - dest: idpId
