--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -2121,6 +2121,9 @@ paths:
           in: query
           name: limit
           type: integer
+        - in: query
+          name: expand
+          type: string
       produces:
         - application/json
       responses:
