japicmp plugin version bumped up & config to ignore breaking changes temporarily

--- a/pom.xml
+++ b/pom.xml
@@ -330,7 +330,7 @@
                 <plugin>
                     <groupId>com.github.siom79.japicmp</groupId>
                     <artifactId>japicmp-maven-plugin</artifactId>
-                    <version>0.13.0</version>
+                    <version>0.14.3</version>
                     <configuration>
                         <oldVersion>
                             <dependency>
@@ -342,8 +342,8 @@
                         </oldVersion>
                         <parameter>
                             <onlyModified>true</onlyModified>
-                            <breakBuildOnBinaryIncompatibleModifications>true</breakBuildOnBinaryIncompatibleModifications>
-                            <breakBuildBasedOnSemanticVersioning>true</breakBuildBasedOnSemanticVersioning>
+                            <breakBuildOnBinaryIncompatibleModifications>false</breakBuildOnBinaryIncompatibleModifications> <!-- TODO: revert to true after v2.0.0 major release -->
+                            <breakBuildBasedOnSemanticVersioning>false</breakBuildBasedOnSemanticVersioning> <!-- TODO: revert to true after v2.0.0 major release -->
                             <postAnalysisScript>${root.dir}/src/japicmp/postAnalysisScript.groovy</postAnalysisScript>
                         </parameter>
                     </configuration>
